--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About - Atharva Metkar</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo-container">
-                <img src="images/atharva image.png" alt="Logo">
+                <img src="images/atharva image.png" alt="Atharva Metkar Logo">
                 <h1>Atharva Metkar</h1>
             </div>
             <nav>
@@ -26,29 +26,35 @@
 
     <section class="about-section">
         <div class="container">
-            <div class="about-content">
+            <article class="about-content">
                 <h2>About Me</h2>
                 <p>I am Atharva Metkar, an Artificial Intelligence and Machine Learning Engineer based in Mumbai, India.</p>
-                <p>As an AI and ML engineer, I specialize in developing intelligent systems that can learn from data and make predictions or decisions.</p>
-            </div>
-            <div class="download-cv">
+                <p>With a passion for technology, I specialize in developing intelligent systems that learn from data, providing innovative solutions that drive impactful decisions.</p>
+            </article>
+            <article class="download-cv">
                 <h2>Download CV</h2>
-                <a href="files/FS22AI028-Atharva-Metkar-CV.pdf" class="button-small">Download</a>
-            </div>
+                <p>Interested in my work? Feel free to download my CV to learn more about my skills, experience, and projects:</p>
+                <a href="files/atharva_cv.pdf" class="button-small" target="_blank">Download CV</a>
+            </article>
         </div>
     </section>
 
     <footer>
         <div class="container">
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/">
-                    <img src="images/linkedin logo.png" alt="LinkedIn">
+                <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/" target="_blank" aria-label="LinkedIn">
+                    <img src="images/linkedin logo.png" alt="LinkedIn Logo">
                 </a>
-                <a href="https://github.com/FS22AI028">
-                    <img src="images/github logo.png" alt="GitHub">
+                <a href="https://github.com/FS22AI028" target="_blank" aria-label="GitHub">
+                    <img src="images/github logo.png" alt="GitHub Logo">
                 </a>
             </div>
+            <p>&copy; 2025 Atharva Metkar. All rights reserved.</p>
+        </div>
+        <div class="back-to-top">
+            <a href="#top">Back to Top</a>
         </div>
     </footer>
 </body>
 </html>
+
