--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <article class="download-cv">
                 <h2>Download CV</h2>
                 <p>Interested in my work? Feel free to download my CV to learn more about my skills, experience, and projects:</p>
-                <a href="files/atharva_cv.pdf" class="button-small" target="_blank">Download CV</a>
+                <a href="files/Atharva-Metkar-CV" class="button-small" target="_blank">Download CV</a>
             </article>
         </div>
     </section>
