--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <article class="download-cv">
                 <h2>Download CV</h2>
                 <p>Interested in my work? Feel free to download my CV to learn more about my skills, experience, and projects:</p>
-               <a href="files/FS22AI028-Atharva-Metkar-CV.pdf" class="button-small" target="_blank">Download CV</a>
+               <a href="https://fs22ai028.github.io/Atharva-s_Portfollio/files/Atharva-Metkar-CV.pdf" class="button-small" target="_blank">Download CV</a>
 
             </article>
         </div>
