--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="logo-container">
-                <img src="images/atharva_image.png" alt="Atharva Metkar Logo" class="rounded-logo">
+                <img src="images/atharva image.png" alt="Atharva Metkar Logo" class="rounded-logo">
                 <h1>Atharva Metkar</h1>
             </div>
             <nav>
