--- a/work.html
+++ b/work.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+     <header>
         <div class="container">
             <div class="logo-container">
-                 <img src="images/atharva image.png" alt="Atharva Metkar Logo">
+                <img src="images/atharva image.png" alt="Atharva Metkar Logo">
                 <h1>Atharva Metkar</h1>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="work.html" class="active">Work</a></li>
+                    <li><a href="#" class="active">About</a></li>
+                    <li><a href="work.html">Work</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
