--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/">
-                    <img src="images/linkedin logo.png" alt="LinkedIn">
+                    <img src="images/linkdin png.png" alt="LinkedIn">
                 </a>
                 <a href="https://github.com/FS22AI028">
                     <img src="images/github logo.png" alt="GitHub">
