--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/">
-                    <img src="images/linkdin png.png" alt="LinkedIn">
-                </a>
-                <a href="https://github.com/FS22AI028">
-                    <img src="images/github logo.png" alt="GitHub">
-                </a>
-            </div>
+   <footer>
+    <div class="container">
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/" target="_blank" rel="noopener noreferrer">
+                <img src="images/linkedin_logo.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/FS22AI028" target="_blank" rel="noopener noreferrer">
+                <img src="images/github_logo.png" alt="GitHub">
+            </a>
         </div>
-    </footer>
+    </div>
+</footer>
+
 </body>
 </html>
 
