--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/" target="_blank" rel="noopener noreferrer">
-                <img src="images/linkedin_logo.png" alt="LinkedIn">
+                <img src="images/linkdin png.png" alt="LinkedIn">
             </a>
             <a href="https://github.com/FS22AI028" target="_blank" rel="noopener noreferrer">
                 <img src="images/github_logo.png" alt="GitHub">
