--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <img src="images/linkdin png.png" alt="LinkedIn">
             </a>
             <a href="https://github.com/FS22AI028" target="_blank" rel="noopener noreferrer">
-                <img src="images/linkdin png.png" alt="GitHub">
+                <img src="images/github_logo.png" alt="GitHub">
             </a>
         </div>
     </div>
