--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/atharva-metkar-51aa98253/" target="_blank" aria-label="LinkedIn">
-                    <img src="images/linkdin_png.png" alt="LinkedIn">
+                    <img src="images/linkdin png.png" alt="LinkedIn">
                 </a>
                 <a href="https://github.com/FS22AI028" target="_blank" aria-label="GitHub">
                     <img src="images/github logo.png" alt="GitHub Logo">
